# instui

./: .gitignore  Cargo.toml
src/: app.rs  db.rs  main.rs
