[package]
name = "instui"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI and Terminal handling
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event"] }

# Async runtime and Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging and Debugging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"