[package]
name = "instui"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI and Terminal handling
ratatui = "0.30"
crossterm = { version = "0.29", features = ["events"] }

# Async runtime and Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Logging and Debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
